Final alignment fix across all dimensions; add basic condensed mode

--- a/src/components/semantic/styles/figure.module.css
+++ b/src/components/semantic/styles/figure.module.css
@@ -37,11 +37,9 @@
         resize: horizontal;
         overflow: auto;
     }
-
+    
     > :first-child img {
         max-width: 100%;
-        padding: 1rem;
-        padding-bottom: 2rem;
     }
 
     .figureRegionModalInputs {
